# monosynth

./: .gitmodules  CMakeLists.txt  Synth.h  main.cpp
